<resources>
    <string name="app_name">Car Rental</string>
    <string name="user">username</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="view_profile">View Profile</string>
    <string name="search_reservation">Search For Reservation</string>
    <string name="search_for_cars">Search For Cars</string>
    <string name="view_cars">View Cars</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="view_reservation">View Reservation</string>
    <string name="show_users">Show Users List</string>
    <string name="change_roles">Change Roles</string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="user_home_screen">User Home Screen</string>
    <string name="manager_home_screen">Manager Home Screen</string>
    <string name="admin_home_screen">Admin Home Screen</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="uta_id">UTA ID</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="role">Role</string>
    <string name="phone">Phone</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip code</string>
    <string name="member">Member</string>
    <string name="role_user">User</string>
    <string name="role_manager">Rental Manager</string>
    <string name="role_admin">Admin</string>
    <string name="member_true">Member</string>
    <string name="member_false">Nonmember</string>
    <string name="update">Update</string>
    <string name="car_name">Car Name</string>
    <string name="date">Date</string>
    <string name="revoke">Revoke</string>
</resources>