<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:gravity="end">

        <Button
            android:id="@+id/main_logout"
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="logout"/>


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_zip_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_uta_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/profile_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="false" >

        <RadioButton
            android:id="@+id/profile_role_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_admin" />

        <RadioButton
            android:id="@+id/profile_role_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_manager" />

        <RadioButton
            android:id="@+id/profile_role_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_user" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/profile_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:focusable="false" >

        <RadioButton
            android:id="@+id/profile_member_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_true" />

        <RadioButton
            android:id="@+id/profile_member_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_false" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/profile_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="update"
            android:text="@string/update" />
        <Button
            android:id="@+id/profile_revoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="revoke"
            android:text="@string/revoke"
            android:visibility="gone"/>
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>